--- a/style.css
+++ b/style.css
@@ -22,6 +22,7 @@ article {
     overflow: hidden;
     border: 1px solid #CCC;
     padding-right: 10px;
+    font-size: 12px;
 }
 
 .avatar {
@@ -58,10 +59,14 @@ article {
     background: url(http://cdn1.iconfinder.com/data/icons/cc_mono_icon_set/blacks/16x16/link.png) no-repeat;
 }
 h3 {
-    display: inline;
-    padding-left: 10px;
+    display: block;
+    margin: 10px 0 5px 0;
+    line-height: 1em;
+    padding-left: 130px;
     font-size: 20px;
+    text-overflow: ellipsis;
 }
+.icon-envelope { margin-left: 10px; line-height: 1em;}
 
 @media (max-width: 980px) {
     /* Enable use of floated navbar text */
