--- a/style.css
+++ b/style.css
@@ -51,7 +51,8 @@ article {
     transition: all .8s;
     -moz-transition: all .8s;
     -webkit-transition: all .8s;
-    -o-transition: all .8s;  
+    -o-transition: all .8s; 
+    border-radius: 5px 0 0 5px; 
 }
 .cover:hover {
     filter: alpha(opacity=0); /* internet explorer */  
