--- a/style.css
+++ b/style.css
@@ -30,6 +30,8 @@ article {
     border: 1px solid #CCC;
     padding-right: 10px;
     font-size: 12px;
+    margin-left: 15px !important;
+    float: left !important;
 }
 
 .avatar {
